--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 İsa Korkmaz. Tasarım ve Kodlama: İsa Korkmaz. Tüm hakları saklıdır.</p>
+        <p>&copy; 2025 İsa Korkmaz Tüm hakları saklıdır.</p>
     </footer>
 
     <script>
@@ -571,4 +571,5 @@
     </script>
 </body>
 </html>
+
 
