--- a/index.html
+++ b/index.html
@@ -447,6 +447,19 @@
                         </a>
                     </div>
                 </article>
+                <article class="project-card">
+                    <div class="project-image-wrapper"> 
+                        <img src="Ekran görüntüsü 2025-12-22 172819.png" alt="Blackjack Oyunu">
+                    </div>
+                    <div class="p-info">
+                        <div class="tags"><span>Html,Css,JavaScript</span></div>
+                        <h3 class="p-title">Blackjack Oyunu</h3>
+                        <p class="p-desc">Eğlence ve Kodlama amaçlı blackjack simülasyonu</p>
+                        <a href="https://github.com/isak0rkmaz/BlackJack" target="_blank" class="project-link">
+                            Projeyi Gör <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </article>
                 
             </div>
         </section>
@@ -571,5 +584,4 @@
     </script>
 </body>
 </html>
-
 
