--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 </article>
                 <article class="project-card">
                     <div class="project-image-wrapper"> 
-                        <img src="Ekran görüntüsü 2025-12-22 172819.png" alt="Blackjack Oyunu">
+                        <img src="bj" alt="Blackjack Oyunu">
                     </div>
                     <div class="p-info">
                         <div class="tags"><span>Html,Css,JavaScript</span></div>
@@ -584,4 +584,5 @@
     </script>
 </body>
 </html>
+
 
