--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
                 <article class="project-card">
                     <div class="project-image-wrapper"> 
-                        <img src="Ekran görüntüsü 2025-12-12 143649.png" alt="Yazar Kasa Programı ekran görüntüsü">
+                        <img src="pos" alt="Yazar Kasa Programı ekran görüntüsü">
                     </div>
                     <div class="p-info">
                         <div class="tags"><span>Python</span><span>Desktop App</span></div>
@@ -584,5 +584,6 @@
     </script>
 </body>
 </html>
+
 
 
